# remla-baseline-project

./: .flake8  .gitignore  .mllint.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile_base  Dockerfile_build  Dockerfile_server  LICENSE  Makefile  Predict tags on StackOverflow with linear models.ipynb  README.md  VERSION.txt  build-base.sh  build-image.sh  build-server.sh  copy_test_dependencies.py  data-validation.ipynb  data.dvc  deploy.sh  docker-compose.yaml  docker-compose.yml  dvc.yaml  expand_query.py  gateway_nginx.conf  gdrive-creds.json  install_dvc_pip.sh  kubernetes-deploy.yml  main.py  params.yaml  pre-commit.sh  pyproject.toml  report.json  report.txt  requirements.txt  requirements_dev.txt  script.py  setup.py  start-server-docker.sh  (+6 more)
.dvc/: config
.github/: pull_request_template.md
config/: definitions.py
data/: extra.tsv  raw.dvc
deployment/: README.md  dashboard.json  deploy-charts-minikube.sh  minikube-build-and-push-containers.sh  mount-shared-dir.sh  train_dashboard.json
docs/: Makefile  conf.py  index.rst  make.bat
extension/: Word.py  __init__.py  mutations.py
http_server/: Dockerfile  http_server.py  index.html
inference/: Dockerfile  requirements.txt
k8s/: deploy.sh  deployment.yml  monitoring.yml  values.yml
libtest/: features_and_data.py  ml_infrastructure.py  model_development.py  monitoring_ml.py
models/: .gitignore  bow_model.pickle  mlb.pkl
notebooks/: Predict tags on StackOverflow with linear models.ipynb  data_validation.ipynb  notebook to file.ipynb  sandbox.ipynb  stack_overflow_tag_prediction.ipynb
output/: accuracies.txt  mlb.joblib  words_counts.joblib
reports/: scores.json
scripts/: release.sh  version.py
services-shared-folder/: .gitignore
src/: 1_preprocessing.py  3_train.py  4_predict.py  5_evaluation.py  6_analyze_features.py  Dockerfile  Vectorization.py  __init__.py  address_imbalance.py  check_bias.py  checkout_and_pull_dvc.sh  data_validation.py  eval.py  evaluation.py  infer.py  learning_curve.py  main.py  mlb.py  model.py  model_training.py  p1_preprocessing.py  p2_text_processors.py  p3_train.py  parameter_tuning.py  persistence.py  preprocess.py  preprocessing.py  project_types.py  read_data.py  requirements.txt  run.py  script.py  serve.py  serve_model.py  server.py  startup.sh  startup_inference.sh  startup_test.sh  startup_training.sh  tag_count.py  (+7 more)
static_analysis/: data_validation.py
terraform/: .terraform.lock.hcl  compute.tf  gke.tf  k8s.tf  locals.tf  main.tf  outputs.tf
(+177 files in other folders)
