[tool.poetry]
name = "stackoverflow-tag-detection"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
nltk = "^3.7"
pandas = "^1.4"
numpy = "^1.22"
scikit-learn = "^1.0"
joblib = "^0.14"
flask =" ^2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0"
bandit = "^1.7"
dslinter = "^2.0"
pydocstyle = "^6.1"
mllint = "^0.12"
dvc = { version = "^2.10", extras = ["gdrive"] }
pytest-cov = "^3.0"
black = "^22.3"
isort = "^5.10"
mypy = "^0"
tensorflow-data-validation = "^1.8"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
